[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ebmdatalab"
author = "EBM DataLab"
author-email = "tech@ebmdatalab.net"
home-page = "https://github.com/ebmdatalab/datalab-pandas"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
         "statsmodels",
         "pandas",
         "pandas-gbq",
         "geopandas",
         "descartes"
         ]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
]
